# pipelinewise-tap-mssql

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: push.yml
tap_mssql/: __init__.py  connection.py
tap_mssql/sync_strategies/: common.py  incremental.py  log_based.py
tests/: test_full_table_interruption.py  test_tap_mssql.py
