[project]
name = "tap-mssql"
version = "2.6.5"
description = "A pipelinewise compatible tap for connecting Microsoft SQL Server"
authors = [{ name = "Rob Winters", email = "wintersrd@gmail.com" }]
maintainers = [{ name = "Meltano", email = "hello@meltano.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = " AGPL-3.0-only"
keywords = ["singer", "meltano", "pipelinewise", "mssql"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "backoff>=2.2.1",
    "backports.datetime-fromisoformat>=2.0.0; python_version < '3.11'",
    "pymssql>=2.1.4,!=2.2.8",
    "realit-singer-python>=5.0.0",
]

[project.urls]
Homepage = "https://robertwinters.nl"
Repository = "https://github.com/wintersrd/pipelinewise-tap-mssql"

[project.scripts]
tap-mssql = "tap_mssql.__init__:main"

[dependency-groups]
dev = [
    "bumpversion>=0.6.0",
    "docker>=7.1.0,<8",
    "mypy>=1.13.0,<2",
    "pre-commit>=4",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-datafiles>=3.0",
    "requests==2.32.3",
    "ruff>=0.9.0",
    "tox>=4.20.0",
    "tox-docker==5.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D400",
    "D401",
    "E722",
]
exclude = ["tests/"]

[tool.ruff.lint.isort]
known-third-party = ["backoff", "backports", "pymssql", "singer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
